# leeviuotinen-web

./: .gitignore  CMakeLists.txt  README.md
scripts/: rebuild.ps1
src/: CMakeLists.txt  leeviuotinen-web.c
src/conf/: leeviuotinen-web.conf
systemd/system/: leeviuotinen-web.service
